--- a/src/css/app.css
+++ b/src/css/app.css
@@ -31,9 +31,11 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  position: relative;
 }
 #sel-res-img{
-  width: 100%;
+  width: 400px;
+  height: 200px;
 }
 #location-input{
   padding: 10px;
@@ -52,4 +54,15 @@
   font-size: 15px;
   color: white;
   margin-right: 4px;
+}
+#img-rating{
+  width: 40px;
+  height: 40px;
+  z-index: 1;
+  position: absolute;
+  right: 6px;
+  bottom: 6px;
+}
+.sidebar-description{
+  padding:3%;
 }
