--- a/src/css/app.css
+++ b/src/css/app.css
@@ -69,6 +69,7 @@
 .sidebar-description{
   padding:3%;
   overflow-y: auto;
+  position: relative;
 }
 .layout.vertical{
   display: flex;
@@ -98,6 +99,43 @@
 }
 #loader{
   display: none;
+}
+#book-button{
+  padding: 9px 10px 10px;
+  color: #fff;
+  background-color: #337ab7;
+  border-color: #2e6da;
+  width: 100%;
+  line-height: 18px;
+  font-weight: 400;
+  text-align: center;
+  border: none;
+  border-radius: 4px;
+  position: absolute;
+  width: 150px;
+  right: 10px;
+  top: 77px;
+}
+#book-button:hover, #book-button:active{
+  background-color: #286090;
+  border-color: #204d74;
+}
+#book-button:focus{
+  background-color: #286090;
+  border-color: #122b40;
+}
+button[disabled]{
+  cursor: not-allowed;
+  filter: alpha(opacity=65);
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  opacity: .65;
+}
+#book-button[disabled]:hover,
+#book-button[disabled]:active,
+#book-button[disabled]:focus{
+  background-color: #337ab7;
+  border-color: #2e6da4;
 }
 .noselect {
   -webkit-touch-callout: none; /* iOS Safari */
